[package]
name = "snarks-lab-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "0.14.0"  # Check the latest version on crates.io
rand="0.8.5"
ff="0.13.0"
bls12_381 = "0.8"
pairing="0.23.0"